--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 
-dist: xenial
-
 matrix:
   include:
+    - name: "Python 3.8.0 on Xenial Linux"
+      python: 3.7           # this works for Linux but is ignored on macOS or Windows
     - name: "Python 3.7.3 on macOS 10.14"
       os: osx
       osx_image: xcode10.2  # Python 3.7.3 running on macOS 10.14.3
@@ -13,15 +13,6 @@ matrix:
         - pip3 install -U pip
         - pip3 install -U pytest
       script: python3 -m pytest
-    - name: "Python 3.7.4 on Windows"
-      os: windows           # Windows 10.0.17134 N/A Build 17134
-      language: shell       # 'language: python' is an error on Travis CI Windows
-      before_install:
-        - choco install python --version 3.7.4
-        - python --version
-        - python -m pip install --upgrade pip
-        - pip3 install --upgrade pytest
-      env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
 
 before_install:
   - python --version
